Moved placement of copyright symbol for fig. 17.1
correction from GCI set

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -1039,7 +1039,7 @@ figure_list:
     caption: >
       Jonathan Borofsky’s *Ballerina Clown*, 1990, installed inside the courtyard of the Museum Ludwig Forum Aachen.
     credit: >
-      © Jonathan Borofsky. Photo: Mine Erhan (© “Die Schmeide”).
+      © Jonathan Borofsky. Photo: © Mine Erhan (“Die Schmeide”).
 
   - id: "17.1b"
     src: fig-17-1b-erhan.jpg
