Updates to figure captions, credit updates from Nina

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -879,7 +879,7 @@ figure_list:
     caption: >
       Julio Le Parc’s space at the Venice Biennale, 1966. The priest trying on Le Parc’s eyeglasses may give an idea of the wider audiences artists hope to reach through art multiples. Denise René Archive.
     credit: >
-      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. \[Photo credit TK.\]
+      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris / Photo: © Andre Morain, Paris.
 
   - id: "13.3"
     src: fig-13-3-plante.jpg
@@ -900,7 +900,7 @@ figure_list:
     caption: >
       <em>Multiples</em> by Hugo Demarco, featured in the Galerie Denise René exhibition <em>Demarco: Dynamique de l’image</em> (April–May 1968) and the accompanying catalogue. The Parisian gallery supported the production of multiples and reserved a section for them in its exhibition catalogues.
     credit: >
-      From *Demarco: Dynamique de l’image, Galerie Denise René, Paris . . . avril–mai 1968*. Paris: Galerie Denise René; Société Mondial d’Impression, 1968. Reproduced with permission. \[Demarco copyright notice TK\]\ \[© TK\]
+      From *Demarco: Dynamique de l’image, Galerie Denise René, Paris . . . avril–mai 1968*. Paris: Galerie Denise René; Société Mondial d’Impression, 1968. Reproduced with permission / © Hugo Demarco
 
   - id: "13.6"
     src: fig-13-6-plante.jpg
@@ -1072,9 +1072,9 @@ figure_list:
   - id: "21.1"
     src: fig-21-1-stamatopoulou.jpg
     caption: >
-      Urs Fischer’s *Death of a moment*, 2007, on view in the exhibition *Fractured Figure: Works from the Dakis Joannou Collection*, 2008, at the DESTE Foundation, Athens, Greece.
+      Urs Fischer’s *Death of a moment*, 2007, on view in the exhibition *Fractured Figure: Works from the Dakis Joannou Collection*, 2008, at the DESTE Foundation, Athens, Greece. Mirrors, aluminum, hydraulics, and control unit. Dimensions variable. Mirrors tilt back and forth in a wavelike pattern.
     credit: >
-      \[Artwork © TK.\] Photo: © The Dakis Joannou Collection, Eugenia Stamatopoulou.
+      The Dakis Joannou Collection © Urs Fischer. Courtesy of the artist and Galerie Eva Presenhuber, Zurich / Photo: Stefan Altenburger.
 
   - id: "22.1"
     src: fig-22-1-van-aubel.jpg
