Biblio core Pullen 2005 through end

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -21,7 +21,7 @@ entries:
     reference_for: "keynotes/1-bek"
 
   - short: Tinguely 2012
-    full: "Tinguely, Jean. 2012. “Für Statik.” In *Museum Tinguely Basel: The Collection*. Basel, Switzerland: Museum Tinguely; Berlin: Kehrer Verlag. “Für Statik” originally published 1959."
+    full: "Tinguely, Jean. 2012. “Für Statik.” In *Museum Tinguely Basel: The Collection*, 393. Basel: Museum Tinguely; Berlin: Kehrer Verlag. “Für Statik” originally published 1959."
     reference_for: "keynotes/1-bek"
 
   - short: Caianiello 2005
@@ -69,7 +69,7 @@ entries:
     reference_for: "keynotes/2-caianiello"
 
   - short: Schader 2012
-    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). [**sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html**](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
+    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). November. [**sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html**](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
     reference_for: "case-studies/3-gilberg"
 
   - short: Farmer 1920
@@ -85,7 +85,7 @@ entries:
     reference_for: "case-studies/4-snow"
 
   - short: Wilfred 1964
-    full: "Wilfred, Thomas. 1964. “*Lumia Suite, Op. 158* by Thomas Wilfred 1964. Lumia Composition in 3 Movements: A technical manual on the projection instrument rendering the composition, as installed at the Museum of Modern Art in New York City during June and July, 1964.” Unpublished. Museum Collection Files, Thomas Wilfred, *Lumia Suite, Opus 158*. Department of Painting and Sculpture, Museum of Modern Art, New York."
+    full: "Wilfred, Thomas. 1964. “*Lumia Suite, Op. 158* by Thomas Wilfred 1964. Lumia Composition in 3 Movements: A technical manual on the projection instrument rendering the composition, as installed at the Museum of Modern Art in New York City during June and July, 1964.” Museum Collection Files, Thomas Wilfred, *Lumia Suite, Opus 158*. Department of Painting and Sculpture, Museum of Modern Art, New York."
     reference_for: "case-studies/4-snow"
 
   - short: Alley 1981
@@ -177,14 +177,14 @@ entries:
     reference_for: "collections/7-stephenson"
 
   - short: Reinhold 1968
-    full: "Reinhold, Robert. 1968. “Sculpture at M.I.T. Merges the Arts with Science.” *New York Times*, December 3, 28."
+    full: "Reinhold, Robert. 1968. “Sculpture at M.I.T. Merges the Arts with Science.” *New York Times*, December 3."
     reference_for: "collections/7-stephenson"
 
   - short: Spencer 1966
     full: "Spencer, Charles. 1966. “Profile of Takis.” *Arts Review* (November 24): 555, 560."
     reference_for: "collections/7-stephenson"
 
-  - short: Takis, Calas, and Calas 1984
+  - short: Takis, E. Calas, and N. Calas 1984
     full: "Takis, Elena Calas, and Nicolas Calas. 1984. *Takis: Monographies*. Paris: Editions Galilée."
     reference_for: "collections/7-stephenson"
 
@@ -224,8 +224,8 @@ entries:
     full: "Muñoz Viñas, Salvador. 2010. “The Artwork Became a Symbol of Itself: Reflections on the Conservation of Modern Art.” In *Theory and Practice in the Conservation of Modern and Contemporary Art*, edited by Ursula Schadler-Saubed et al., 9–19. London: Archetype."
     reference_for: "collections/8-pavic_mestric"
 
-  - short: van Saaze 2013
-    full: "van Saaze, Vivian. 2013. *Installation Art and the Museum: Presentation and Conservation of Changing Artwork*. Amsterdam: Amsterdam University Press."
+  - short: Van Saaze 2013
+    full: "Van Saaze, Vivian. 2013. *Installation Art and the Museum: Presentation and Conservation of Changing Artwork*. Amsterdam: Amsterdam University Press."
     reference_for: "collections/8-pavic_mestric"
 
   - short: Wharton and Molotch 2009
@@ -253,7 +253,7 @@ entries:
     reference_for: "collections/9-gillies"
 
   - short: Rossi 2012
-    full: "Rossi, Cristina. 2012. “Imágenes inestables: Tránsitos Buenos Aires-Paris-Buenos Aires.” María José Herrera, ed. *Real/Virtual: Arte cinético argentine en los años sesenta*, 47–67. Buenos Aires: Asociación Amigos del Museo Nacional de Bellas Artes."
+    full: "Rossi, Cristina. 2012. “Imágenes inestables: Tránsitos Buenos Aires-Paris-Buenos Aires.” In *Real/Virtual: Arte cinético argentine en los años sesenta*, edited by María José Herrera, 47–67. Buenos Aires: Asociación Amigos del Museo Nacional de Bellas Artes."
     reference_for: "collections/9-gillies"
 
   - short: Suárez 2007
@@ -341,7 +341,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Scheffler-Rother 2004
-    full: "Scheffler-Rother, Ulrike. 2004. *Die Rolandschule in Düsseldorf*. Rheinische Kunststätten, Booklet 464, Köln."
+    full: "Scheffler-Rother, Ulrike. 2004. *Die Rolandschule in Düsseldorf*. Booklet 464. Cologne: Rheinische Kunststätten."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Schmidt 2008
@@ -349,7 +349,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Uecker 1961
-    full: "Uecker, Günther. 1961. “Der Zustand Weiss.” In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager. Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel, Esslingen 1999–2000: 251."
+    full: "Uecker, Günther. 1961. “Der Zustand Weiss.” In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager, 251. Esslingen: Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel, 1999–2000."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Amigo, Dolinko, and Rossi 2010
@@ -417,7 +417,7 @@ entries:
     reference_for: "theoretical-issues/13-plante"
 
   - short: Rousseau 2005
-    full: "Rousseau, Pascal. 2005. “‘Folklore planétaire.’ Le sujet cybernétique dans l’art optique des années 1960.” In *L’oeil moteur: Art optique et cinétique, 1950–1975*, edited by Emmanuel Guignon and Arnauld Pierre. Strasbourg: Musée d’Art Contemporain de Strasbourg, 142–150."
+    full: "Rousseau, Pascal. 2005. “‘Folklore planétaire.’ Le sujet cybernétique dans l’art optique des années 1960.” In *L’oeil moteur. Art optique et cinétique, 1950–1975*, edited by Emmanuel Guigon and Arnauld Pierre, 142–150. Strasbourg: Musée d’Art Contemporain de Strasbourg."
     reference_for: "theoretical-issues/13-plante"
 
   - short: Beunen 2005
@@ -473,7 +473,7 @@ entries:
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Pullen 2005
-    full: "Pullen, Derek. 2005. “Electronic Media: Thinking the Conservator’s Role.” In Hummelen and Sillé 2005:300–301."
+    full: "Pullen, Derek. 2005. “Electronic Media: Thinking the Conservator’s Role.” In Hummelen and Sillé 2005: 300–301."
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Quirot 2007
@@ -490,7 +490,7 @@ entries:
 
   - short: Scholte and Wharton 2011
     full: "Scholte, Tatja, and Glenn Wharton, eds. 2011. *Inside Installations: Theory and Practice in the Care of Complex Artworks*. Amsterdam: Amsterdam University Press."
-    reference_for: "theoretical-issues/14-dhaenens"
+    reference_for: "collections/11-meijer, theoretical-issues/14-dhaenens"
 
   - short: Smith and Harman 2009
     full: "Smith, Polly, and Ben Harman. 2009. “The Artist’s Role in Installation and Future Display at the Gallery of Modern Art, Glasgow.” In *Art, Conservation and Authenticities: Material, Concept, Context*, edited by Erma Hermens and Tina Fiske, 217–26. London: Archetype."
@@ -508,12 +508,12 @@ entries:
     full: "Van de Vall, Renee. 2005. “Painful Decisions: Philosophical Considerations on a Decision-Making Model.” In Hummelen and Sillé 2005: 196–200."
     reference_for: "theoretical-issues/14-dhaenens"
 
-  - short: van Saaze 2009
-    full: "van Saaze, Vivian. 2009. “From Intention to Interaction: Reframing the Artist’s Interview in Conservation Research.” In *Art d’aujourd’hui, patrimoine de demain, Conservation-restauration des oeuvres contemporaines*, 20–28. Paris: SFIIC, Paris."
+  - short: Van Saaze 2009
+    full: "Van Saaze, Vivian. 2009. “From Intention to Interaction: Reframing the Artist’s Interview in Conservation Research.” In *Art d’aujourd’hui, patrimoine de demain, Conservation-restauration des oeuvres contemporaines*, 20–28. Paris: SFIIC, Paris."
     reference_for: "theoretical-issues/14-dhaenens"
 
-  - short: van Wegen 2005
-    full: "van Wegen, D. H. 2005. “Between Fetish and Scores: The Position of the Curator of Contemporary Art.” In Hummelen and Sillé 2005: 201–9."
+  - short: Van Wegen 2005
+    full: "Van Wegen, D. H. 2005. “Between Fetish and Scores: The Position of the Curator of Contemporary Art.” In Hummelen and Sillé 2005: 201–9."
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Barr and Barr 2014
@@ -569,7 +569,7 @@ entries:
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Webb 1996
-    full: "Webb, Evan. 1996. “Wind Wand: The Magic of Len Lye and the Toronto Affair.” *Art New Zealand*. Auckland."
+    full: "Webb, Evan. 1996. “Wind Wand: The Magic of Len Lye and the Toronto Affair.” *Art New Zealand* 78 (Autumn): 61–63."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Clari 2004
