Fix formatting errors that were breaking build
Following Editorial’s work on `first-pages` and in updating the theme
to the version most currently used in Artistry in Bronze, there were a
few issues in the book that were causing build errors.

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -9,7 +9,7 @@ entries:
     reference_for: "keynotes/1-bek"
 
   - short: Lorenzen 2012
-    full: "Lorenzen, Astrid. 2012. "Report on the Restoration of Sculpture méta-mécanique automobile, 06/06/12, Museum Tinguely, Basel." In *Museum Tinguely Basel: The Collection*, 200. Basel: Museum Tinguely; Berlin: Kehrer Verlag."
+    full: "Lorenzen, Astrid. 2012. “Report on the Restoration of Sculpture méta-mécanique automobile, 06/06/12, Museum Tinguely, Basel.” In *Museum Tinguely Basel: The Collection*, 200. Basel: Museum Tinguely; Berlin: Kehrer Verlag."
     reference_for: "keynotes/1-bek"
 
   - short: Marshall 2010
@@ -41,7 +41,7 @@ entries:
     reference_for: "preface,keynotes/2-caianiello"
 
   - short: Eco 1990
-    full: "Eco, Umberto. 1990. "Interpretation and Overinterpretation: World, History, Texts." Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [tannerlectures.utah.edu/\_documents/a-to-z/e/Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
+    full: "Eco, Umberto. 1990. “Interpretation and Overinterpretation: World, History, Texts.” Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [tannerlectures.utah.edu/\_documents/a-to-z/e/Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
     reference_for: "keynotes/2-caianiello"
 
   - short: Eco 1992
