Make figure and other fixes for 9-23

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -69,7 +69,7 @@ entries:
     reference_for: "keynotes/2-caianiello"
 
   - short: Schader 2012
-    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). November. [**sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html**](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
+    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). November. [sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
     reference_for: "case-studies/3-gilberg"
 
   - short: Farmer 1920
@@ -77,7 +77,7 @@ entries:
     reference_for: "case-studies/4-snow"
 
   - short: Turrell 2013
-    full: "Turrell, James. 2013. “James Turrell with Alex Bacon.” *The Brooklyn Rail*, September 4. Accessed August 27, 2016. [**www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon**](http://www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon)."
+    full: "Turrell, James. 2013. “James Turrell with Alex Bacon.” *The Brooklyn Rail*, September 4. Accessed August 27, 2016. [www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon](http://www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon)."
     reference_for: "case-studies/4-snow"
 
   - short: Wilfred 1947
@@ -109,7 +109,7 @@ entries:
     reference_for: "case-studies/5-lawson"
 
   - short: Lodder 2007
-    full: "Lodder, Christina. 2007. “Naum Gabo and the Quandaries of the Replica.” *Tate Papers* 8 (Autumn). Accessed May 16, 2016. [**www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica**](http://www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica)."
+    full: "Lodder, Christina. 2007. “Naum Gabo and the Quandaries of the Replica.” *Tate Papers* 8 (Autumn). Accessed May 16, 2016. [www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica](http://www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica)."
     reference_for: "case-studies/5-lawson"
 
   - short: Malina 1974
@@ -145,7 +145,7 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Langill 2006
-    full: "Langill, Caroline. 2006. *Shifting Polarities: Interview with Max Dean*. “Question 4: Shift into interactivity,” 5:40. “Question 5: Thinking about context,” 3:09. Interview conducted May 4, 2006, in Toronto, Ontario. Daniel Langlois Foundation, video, 33:17. [**www.fondation-langlois.org/html/e/page.php?NumPage=1950**](http://www.fondation-langlois.org/html/e/page.php?NumPage=1950)."
+    full: "Langill, Caroline. 2006. *Shifting Polarities: Interview with Max Dean*. “Question 4: Shift into interactivity,” 5:40. “Question 5: Thinking about context,” 3:09. Interview conducted May 4, 2006, in Toronto, Ontario. Daniel Langlois Foundation, video, 33:17. [www.fondation-langlois.org/html/e/page.php?NumPage=1950](http://www.fondation-langlois.org/html/e/page.php?NumPage=1950)."
     reference_for: "case-studies/6-phillips"
 
   - short: Laurenson 2006
@@ -325,7 +325,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Herbst 2005
-    full: "Herbst, Kristina. 2005. “‘Dynamische Strukturen’: Konservatorische Betrachtung einer malerischen Werkgruppe (1957–63) von Heinz Mack.” Diploma thesis, HAWK Hildesheim. Accessed July 7, 2016. [**www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf**](http://www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf)."
+    full: "Herbst, Kristina. 2005. “‘Dynamische Strukturen’: Konservatorische Betrachtung einer malerischen Werkgruppe (1957–63) von Heinz Mack.” Diploma thesis, HAWK Hildesheim. Accessed July 7, 2016. [www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf](http://www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf)."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Heydenreich 2012
@@ -517,15 +517,15 @@ entries:
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Barr and Barr 2014
-    full: "Barr, Jim, and Mary Barr. 2014. “One Day in New Plymouth Art in Public Places Trust Boardroom.” *Over the Net* (blog). November 18, 2014. [**overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html**](http://overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html)."
+    full: "Barr, Jim, and Mary Barr. 2014. “One Day in New Plymouth Art in Public Places Trust Boardroom.” *Over the Net* (blog). November 18, 2014. [overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html](http://overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Barr and Barr 2016
-    full: "Barr, Jim, and Mary Barr. 2016. “12 Cool Things Kiwi (Visual) Artists Have Achieved in the Past Year.” *Over the Net* (blog). May 17, 2016. [**overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html**](http://overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html)."
+    full: "Barr, Jim, and Mary Barr. 2016. “12 Cool Things Kiwi (Visual) Artists Have Achieved in the Past Year.” *Over the Net* (blog). May 17, 2016. [overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html](http://overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Blundell 2006
-    full: "Blundell, Sally. 2006. “Whose Lye Is It Anyway?” *The Listener*, July 22. Accessed November 15, 2016. [**www.listener.co.nz/culture/whose-lye-is-it-anyway**](http://www.listener.co.nz/culture/whose-lye-is-it-anyway/)."
+    full: "Blundell, Sally. 2006. “Whose Lye Is It Anyway?” *The Listener*, July 22. Accessed November 15, 2016. [www.listener.co.nz/culture/whose-lye-is-it-anyway](http://www.listener.co.nz/culture/whose-lye-is-it-anyway/)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Brett and Cotter 2000
