Add URL breakpoints with shortcode and manually
Shortcode doesn’t work in bibliography.yml or within other shortcodes
like {{< q-backmatter >}} so break points need to be added manually.

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -41,7 +41,7 @@ entries:
     reference_for: "preface,keynotes/2-caianiello"
 
   - short: Eco 1990
-    full: "Eco, Umberto. 1990. “Interpretation and Overinterpretation: World, History, Texts.” Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [tannerlectures.utah.edu/\_documents/a-to-z/e/Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
+    full: "Eco, Umberto. 1990. “Interpretation and Overinterpretation: World, History, Texts.” Paper presented at the Tanner Lectures on Human Values. Clare Hall, Cambridge University, March 7–8. Accessed August 29, 2016. [http://tannerlectures.utah.edu/&#8203;\_documents/&#8203;a-to-z/e/&#8203;Eco\_91.pdf](http://tannerlectures.utah.edu/_documents/a-to-z/e/Eco_91.pdf)."
     reference_for: "keynotes/2-caianiello"
 
   - short: Eco 1992
@@ -49,11 +49,11 @@ entries:
     reference_for: "keynotes/2-caianiello"
 
   - short: Eco 2012
-    full: "Eco, Umberto. 2012. “Il realismo minimo.” *La Repubblica*, March 11. Accessed August 29, 2016. [ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html](http://ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html)."
+    full: "Eco, Umberto. 2012. “Il realismo minimo.” *La Repubblica*, March 11. Accessed August 29, 2016. [http://ricerca.repubblica.it/&#8203;repubblica/&#8203;archivio/&#8203;repubblica/&#8203;2012/03/11/&#8203;il-realismo-minimo.html](http://ricerca.repubblica.it/repubblica/archivio/repubblica/2012/03/11/il-realismo-minimo.html)."
     reference_for: "keynotes/2-caianiello"
 
   - short: Laurenson 2005
-    full: "Laurenson, Pip. 2005. “The Management of Display Equipment in Time-based Media Installations.” *Tate Papers* 3 (Spring). Accessed January 1, 2017. [www.tate.org.uk/download/file/fid/7344](http://www.tate.org.uk/download/file/fid/7344). Originally published in *Modern Art, New Museums: Contributions to the Bilbao Congress 13–17 September 2004*, edited by Ashok Roy and Perry Smith, 49–53. London: International Institute for Conservation of Historic and Artistic Works, 2004."
+    full: "Laurenson, Pip. 2005. “The Management of Display Equipment in Time-based Media Installations.” *Tate Papers* 3 (Spring). Accessed January 1, 2017. [http://www.tate.org.uk/&#8203;download/&#8203;file/&#8203;fid/7344](http://www.tate.org.uk/download/file/fid/7344). Originally published in *Modern Art, New Museums: Contributions to the Bilbao Congress 13–17 September 2004*, edited by Ashok Roy and Perry Smith, 49–53. London: International Institute for Conservation of Historic and Artistic Works, 2004."
     reference_for: "keynotes/2-caianiello"
 
   - short: Rorty 1992
@@ -69,7 +69,7 @@ entries:
     reference_for: "keynotes/2-caianiello"
 
   - short: Schader 2012
-    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). November. [sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
+    full: "Schader, Susan. 2012. “‘It exists.’ Artist Chris Burden on *Metropolis II*.” *Words & Images* (blog). November. [http://sschader.blogspot.com/&#8203;2012/11/&#8203;it-exists-artist-chris-burden-on.html](http://sschader.blogspot.com/2012/11/it-exists-artist-chris-burden-on.html)."
     reference_for: "case-studies/3-gilberg"
 
   - short: Farmer 1920
@@ -77,7 +77,7 @@ entries:
     reference_for: "case-studies/4-snow"
 
   - short: Turrell 2013
-    full: "Turrell, James. 2013. “James Turrell with Alex Bacon.” *The Brooklyn Rail*, September 4. Accessed August 27, 2016. [www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon](http://www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon)."
+    full: "Turrell, James. 2013. “James Turrell with Alex Bacon.” *The Brooklyn Rail*, September 4. Accessed August 27, 2016. [http://www.brooklynrail.org/&#8203;2013/09/&#8203;art/&#8203;james-turrell-with-alex-bacon](http://www.brooklynrail.org/2013/09/art/james-turrell-with-alex-bacon)."
     reference_for: "case-studies/4-snow"
 
   - short: Wilfred 1947
@@ -109,7 +109,7 @@ entries:
     reference_for: "case-studies/5-lawson"
 
   - short: Lodder 2007
-    full: "Lodder, Christina. 2007. “Naum Gabo and the Quandaries of the Replica.” *Tate Papers* 8 (Autumn). Accessed May 16, 2016. [www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica](http://www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica)."
+    full: "Lodder, Christina. 2007. “Naum Gabo and the Quandaries of the Replica.” *Tate Papers* 8 (Autumn). Accessed May 16, 2016. [http://www.tate.org.uk/&#8203;research/&#8203;publications/&#8203;tate-papers/08/&#8203;naum-gabo-and-the-quandaries-of-the-replica](http://www.tate.org.uk/research/publications/tate-papers/08/naum-gabo-and-the-quandaries-of-the-replica)."
     reference_for: "case-studies/5-lawson"
 
   - short: Malina 1974
@@ -145,15 +145,15 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Langill 2006
-    full: "Langill, Caroline. 2006. *Shifting Polarities: Interview with Max Dean*. “Question 4: Shift into interactivity,” 5:40. “Question 5: Thinking about context,” 3:09. Interview conducted May 4, 2006, in Toronto, Ontario. Daniel Langlois Foundation, video, 33:17. [www.fondation-langlois.org/html/e/page.php?NumPage=1950](http://www.fondation-langlois.org/html/e/page.php?NumPage=1950)."
+    full: "Langill, Caroline. 2006. *Shifting Polarities: Interview with Max Dean*. “Question 4: Shift into interactivity,” 5:40. “Question 5: Thinking about context,” 3:09. Interview conducted May 4, 2006, in Toronto, Ontario. Daniel Langlois Foundation, video, 33:17. [http://www.fondation-langlois.org/&#8203;html/e/&#8203;page.php?NumPage=1950](http://www.fondation-langlois.org/html/e/page.php?NumPage=1950)."
     reference_for: "case-studies/6-phillips"
 
   - short: Laurenson 2006
-    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). Accessed April 1, 2016.[www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
+    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). Accessed April 1, 2016.[http://www.tate.org.uk/&#8203;research/&#8203;publications/&#8203;tate-papers/06/&#8203;authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
     reference_for: "case-studies/6-phillips, collections/8-pavic_mestric"
 
   - short: Smithsonian Institution 2010
-    full: "Smithsonian Institution. 2010. *Collaborations in Conserving Time-Based Art: A Summary of Discussion Group Sessions of a Colloquium Co-organized by the Lunder Conservation Center of the Smithsonian American Art Museum and National Portrait Gallery and the Hirshhorn Museum and Sculpture Garden*. Washington, D.C.: Office of Policy and Analysis, Smithsonian Institution. [www.si.edu/content/tbma/documents/Time-Based-Art\_Report.pdf](https://www.si.edu/content/tbma/documents/Time-Based-Art_Report.pdf)."
+    full: "Smithsonian Institution. 2010. *Collaborations in Conserving Time-Based Art: A Summary of Discussion Group Sessions of a Colloquium Co-organized by the Lunder Conservation Center of the Smithsonian American Art Museum and National Portrait Gallery and the Hirshhorn Museum and Sculpture Garden*. Washington, D.C.: Office of Policy and Analysis, Smithsonian Institution. [http://www.si.edu/&#8203;content/&#8203;tbma/&#8203;documents/&#8203;Time-Based-Art\_Report.pdf](https://www.si.edu/content/tbma/documents/Time-Based-Art_Report.pdf)."
     reference_for: "case-studies/6-phillips"
 
   - short: Galerie Alexandre Iolas and Clay 1966
@@ -325,7 +325,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Herbst 2005
-    full: "Herbst, Kristina. 2005. “‘Dynamische Strukturen’: Konservatorische Betrachtung einer malerischen Werkgruppe (1957–63) von Heinz Mack.” Diploma thesis, HAWK Hildesheim. Accessed July 7, 2016. [www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf](http://www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf)."
+    full: "Herbst, Kristina. 2005. “‘Dynamische Strukturen’: Konservatorische Betrachtung einer malerischen Werkgruppe (1957–63) von Heinz Mack.” Diploma thesis, HAWK Hildesheim. Accessed July 7, 2016. [http://www.equipe-05.com/&#8203;pdf%20files/&#8203;Heinz%20Mack%20Dynamische%20Strukturen02.pdf](http://www.equipe-05.com/pdf%20files/Heinz%20Mack%20Dynamische%20Strukturen02.pdf)."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Heydenreich 2012
@@ -517,15 +517,15 @@ entries:
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Barr and Barr 2014
-    full: "Barr, Jim, and Mary Barr. 2014. “One Day in New Plymouth Art in Public Places Trust Boardroom.” *Over the Net* (blog). November 18, 2014. [overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html](http://overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html)."
+    full: "Barr, Jim, and Mary Barr. 2014. “One Day in New Plymouth Art in Public Places Trust Boardroom.” *Over the Net* (blog). November 18, 2014. [http://overthenet.blogspot.co.nz/&#8203;2014/11/&#8203;one-day-in-len-lye-trust-boardroom.html](http://overthenet.blogspot.co.nz/2014/11/one-day-in-len-lye-trust-boardroom.html)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Barr and Barr 2016
-    full: "Barr, Jim, and Mary Barr. 2016. “12 Cool Things Kiwi (Visual) Artists Have Achieved in the Past Year.” *Over the Net* (blog). May 17, 2016. [overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html](http://overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html)."
+    full: "Barr, Jim, and Mary Barr. 2016. “12 Cool Things Kiwi (Visual) Artists Have Achieved in the Past Year.” *Over the Net* (blog). May 17, 2016. [http://overthenet.blogspot.co.nz/&#8203;2016/05/&#8203;12-cool-things-kiwi-visual-artists-have.html](http://overthenet.blogspot.co.nz/2016/05/12-cool-things-kiwi-visual-artists-have.html)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Blundell 2006
-    full: "Blundell, Sally. 2006. “Whose Lye Is It Anyway?” *The Listener*, July 22. Accessed November 15, 2016. [www.listener.co.nz/culture/whose-lye-is-it-anyway](http://www.listener.co.nz/culture/whose-lye-is-it-anyway/)."
+    full: "Blundell, Sally. 2006. “Whose Lye Is It Anyway?” *The Listener*, July 22. Accessed November 15, 2016. [http://www.listener.co.nz/&#8203;culture/&#8203;whose-lye-is-it-anyway](http://www.listener.co.nz/culture/whose-lye-is-it-anyway/)."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Brett and Cotter 2000
@@ -585,5 +585,5 @@ entries:
     reference_for: "posters/17-erhan"
 
   - short: Melillo, Richmond, and Yohe 2014
-    full: "Melillo, Jerry M., Terese (T. C.) Richmond, and Gary W. Yohe, eds. 2014. *Climate Change Impacts in the United States: The Third National Climate Assessment*. Washington, D.C.: U.S. Global Change Research Program. [doi:10.7930/J0Z31WJ2](http://s3.amazonaws.com/nca2014/low/NCA3_Full_Report_0a_Front_Matter_LowRes.pdf?download=1)."
+    full: "Melillo, Jerry M., Terese (T. C.) Richmond, and Gary W. Yohe, eds. 2014. *Climate Change Impacts in the United States: The Third National Climate Assessment*. Washington, D.C.: U.S. Global Change Research Program. [http://doi:10.7930/&#8203;J0Z31WJ2](http://s3.amazonaws.com/nca2014/low/NCA3_Full_Report_0a_Front_Matter_LowRes.pdf?download=1)."
     reference_for: "posters/19-mack"
