--- a/data/publication.yml
+++ b/data/publication.yml
@@ -32,7 +32,8 @@ primary_contributor:
     role: Editor
     role_code: edc
     url:
-    bio:
+    bio: "Rachel Rivenc, associate scientist, has been working within the Modern and Contemporary Art Research Initiative at the Getty Conservation Institute since 2006. She studies the diverse materials and techniques used by contemporary artists, and their conservation. She is also coordinator for the Modern Materials and Contemporary Art working group of ICOM–CC. Rivenc holds an MA in paintings conservation from the Université Paris 1 Panthéon-Sorbonne and received a PhD in history from the Université de Versailles Saint-Quentin-en-Yvelines. She recently published the book *Made in Los Angeles: Materials, Processes, and the Birth of West Coast Minimalism*."
+    file_as: 1
   - id: 2
     first_name: Reinhard
     last_name: Bek
@@ -41,7 +42,8 @@ primary_contributor:
     role: Editor
     role_code: edc
     url:
-    bio:
+    bio: "Reinhard Bek completed his training as an objects conservator in 2002. That same year, he joined the Museum Tinguely in Basel, Switzerland, as its first permanent conservator. Bek was a founding member of the European Union project Inside Installations in 2003, and he was hired in 2008 by the Museum of Modern Art, New York, to spearhead an assessment of their technology-based artwork. In 2012, with his partner Christine Frohnert, he founded Bek & Frohnert LLC, based in New York City. He has lectured internationally and published widely on contemporary art conservation."
+    file_as: 2
 
 secondary_contributor:
 
