--- a/data/figures.yml
+++ b/data/figures.yml
@@ -337,7 +337,7 @@ figure_list:
   - id: "5.4"
     src: fig-5-4-lawson.jpg
     caption: >
-      Tate conservation manager Louise Lawson and Ming-Yi Tsai, the artist’s son, at Tate during the initial meeting in January 2016 (Wen-Ying Tsai).
+      Tate conservation manager Louise Lawson and Ming-Yi Tsai, the artist’s son, at Tate during the initial meeting in January 2016.
     credit: >
       Courtesy Tsai Art and Science Foundation. Photo: © Tate, London 2016.
 
