--- a/data/figures.yml
+++ b/data/figures.yml
@@ -623,7 +623,7 @@ figure_list:
     media_type: youtube
     fallback: fig-9-5-video-gillies.jpg
     caption: >
-      Horacio García Rossi’s *Structure à lumiere instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horacio García Rossi. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
