--- a/data/figures.yml
+++ b/data/figures.yml
@@ -1046,7 +1046,7 @@ figure_list:
     caption: >
       Diagram of the mechanism that moves the leg of Jonathan Borofsky’s *Ballerina Clown*, 1990.
     credit: >
-      © Jonathan Borofsky. Illustrator: Mine Erhan (© “Die Schmeide”).
+      © Jonathan Borofsky. Illustrator: © Mine Erhan (“Die Schmeide”).
 
   - id: "18.1"
     src: fig-18-1-iazurlo.jpg
