--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -149,7 +149,7 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Laurenson 2006
-    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). Accessed April 1, 2016.[http://www.tate.org.uk/&#8203;research/&#8203;publications/&#8203;tate-papers/06/&#8203;authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
+    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). Accessed April 1, 2016. [http://www.tate.org.uk/&#8203;research/&#8203;publications/&#8203;tate-papers/06/&#8203;authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
     reference_for: "case-studies/6-phillips, collections/8-pavic_mestric"
 
   - short: Smithsonian Institution 2010
@@ -281,7 +281,7 @@ entries:
     reference_for: "collections/11-meijer"
 
   - short: Bek 2011
-    full: "Bek, Reinhard. 2011. “Between Ephemeral and Material: Documentation and Preservation of Technology-Based Works of Art.” In Scholte and Wharton 2011:205–15. Amsterdam: Amsterdam University Press."
+    full: "Bek, Reinhard. 2011. “Between Ephemeral and Material: Documentation and Preservation of Technology-Based Works of Art.” In Scholte and Wharton 2011: 205–15. Amsterdam: Amsterdam University Press."
     reference_for: "collections/11-meijer"
 
   - short: Bek 2013
